--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -37,7 +37,7 @@
           }
         </ul>
         }@else{
-        <p>No crews available</p>
+        <p class="no-crews-message">No crews available</p>
         }
       </div>
       }
