--- a/src/app/main-page/tables/task-table/task-table.component.html
+++ b/src/app/main-page/tables/task-table/task-table.component.html
@@ -45,7 +45,7 @@
     </table>
   </div>
   } @if(tableTasks.length === 0){
-  <p>No tasks available.</p>
+  <p class="no-tasks">No tasks available.</p>
   }
 </div>
 
