--- a/src/app/main-page/google-sheet/google-sheet.component.css
+++ b/src/app/main-page/google-sheet/google-sheet.component.css
@@ -14,39 +14,40 @@
   padding: 0.5rem 1.5rem;
   text-decoration: none;
   color: #3c4043;
-  background-color: #e8eaed; 
+  background-color: #e8eaed;
   border: 1px solid #dadce0;
   border-bottom: none;
-  border-radius: 0.375rem 0.375rem 0 0; 
+  border-radius: 0.375rem 0.375rem 0 0;
   transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
   font-size: 1rem;
-  margin-right: -1px; 
-  box-shadow: 0 2px 4px rgba(60, 64, 67, 0.15); 
+  margin-right: -1px;
+  box-shadow: 0 2px 4px rgba(60, 64, 67, 0.15);
 }
 
 .navigation-tabs a.active {
-  background-color: #ffffff; 
-  color: #202124; 
+  background-color: #ffffff;
+  color: #202124;
   border-bottom: 1px solid transparent;
   font-weight: bold;
-  box-shadow: none; 
+  box-shadow: none;
 }
 
 .navigation-tabs a:hover {
-  background-color: #d2e3fc; 
-  color: #1967d2; 
-  box-shadow: 0 4px 6px rgba(60, 64, 67, 0.2); 
+  background-color: #d2e3fc;
+  color: #1967d2;
+  box-shadow: 0 4px 6px rgba(60, 64, 67, 0.2);
 }
 
 .crew-name {
   font-size: 1.25rem;
   font-weight: bold;
+  color: #131a25;
 }
 
 .kickoff-btn {
-  background-color: white; 
+  background-color: white;
   color: #000000;
-
+  border: 1px solid #131a25;
   padding: 0.625rem 1rem;
   border-radius: 0.25rem;
   cursor: pointer;
@@ -59,12 +60,12 @@
 }
 
 .kickoff-btn:hover {
-  background-color: #000000; 
-  color: white
+  background-color: #000000;
+  color: white;
 }
 
 .delete-crew {
-  background-color: #d93025; 
+  background-color: #d93025;
   color: #fff;
   border: 1px solid #d93025;
   padding: 0.625rem 1rem;
