--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,13 @@
 /* Resets */
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: "Roboto", sans-serif;
-  margin: 0;
-  padding: 0;
+
   /* font-size: 10px; */
 }
 
@@ -17,7 +18,7 @@ a {
 
 ul,
 ol {
-  list-style: none;
+  list-style-type: none;
 }
 
 button {
