--- a/src/app/main-page/main-page.component.css
+++ b/src/app/main-page/main-page.component.css
@@ -4,7 +4,6 @@
   align-items: flex-start;
   padding: 1rem 7.4rem;
   border-radius: 1rem;
-
   z-index: 0;
 }
 
@@ -17,9 +16,8 @@ h1 {
 p {
   font-size: 1.3rem;
   color: #555;
-  margin-bottom: 1.3rem;
+  padding: 1.3rem 0;
 }
-
 
 .buttons-container {
   display: flex;
@@ -65,7 +63,11 @@ button.create-crew {
   background-color: #34a853;
   color: #fff;
 }
-
+button.kickoff-btn {
+  background-color: white;
+  color: #000000;
+  border: 1px solid #131a25;
+}
 button.load-crew:hover:not(.not-logged-in) {
   background-color: #0f336e;
   box-shadow: 0 1px 4px rgba(60, 64, 67, 0.3);
@@ -75,13 +77,20 @@ button.create-crew:hover:not(.not-logged-in) {
   background-color: #0a3d12;
   box-shadow: 0 1px 4px rgba(60, 64, 67, 0.3);
 }
+
+button.kickoff-btn:hover:not(.not-logged-in) {
+  background-color: #000000;
+  color: white;
+}
 .crew-list {
   position: absolute;
   top: 100%;
   left: 0;
   width: 100%;
-  padding: 0.63rem;
-  background-color: #e0e0e0;
+  max-height: 10rem;
+  overflow-y: auto;
+  padding-top: 0.5rem;
+  background-color: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   transition: opacity 0.3s ease, transform 0.3s ease;
   z-index: 5;
@@ -97,16 +106,19 @@ button.create-crew:hover:not(.not-logged-in) {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
   padding: 0.5rem 0.75rem;
   background-color: #ffffff;
   margin-bottom: 0.5rem;
-  border: 1px solid #ccc;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
   cursor: pointer;
   transition: background-color 0.2s ease, box-shadow 0.2s ease;
 }
 
 .crew-list li:hover {
-  background-color: #c8c8c8;
+  background-color: #689aec;
+  color: white;
 }
 
 .crew-list li i {
@@ -158,7 +170,8 @@ button.create-crew:hover:not(.not-logged-in) {
   }
 
   .buttons-container {
-    flex-direction: row;
+    flex-direction: column;
+    margin: 0 auto;
   }
   h1 {
     font-size: 2.5rem;
