--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -37,6 +37,12 @@
       </div>
       <span class="menu-text">Main Page</span>
     </a>
+    <a [routerLink]="['/profile', getUser()!.id]" class="menu-item">
+      <div class="menu-icon profile-icon">
+        <i class="fa fa-user"></i>
+      </div>
+      <span class="menu-text profile">Profile</span>
+    </a>
     <section class="menu logout" [ngClass]="{ 'logout-item': true }">
       <div class="menu-item" (click)="logout()">
         <div class="menu-icon">
