--- a/src/app/main-page/google-sheet/google-sheet.component.html
+++ b/src/app/main-page/google-sheet/google-sheet.component.html
@@ -40,7 +40,9 @@
     </div>
     }
   </div>
-
+  <button class="kickoff-btn" (click)="navigateToKickoff()">
+    Crew Kickoff
+  </button>
   <button class="delete-crew" (click)="deleteCrew()">
     <i class="fas fa-trash-alt"></i>
   </button>
