[feat] Task table option no assign added

--- a/src/app/main-page/create-forms/add-task/add-task.component.html
+++ b/src/app/main-page/create-forms/add-task/add-task.component.html
@@ -55,6 +55,7 @@
         <label for="agentId">Assign to Agent:</label>
         <select id="agentId" formControlName="agentId">
           <option value="" disabled>Select an agent</option>
+          <option [value]="null">Save without assigning</option>
           @for(agent of agents(); track agent.id){
           <option [value]="agent.id">
             {{ agent.name }}
