--- a/src/app/main-page/create-forms/create-crew/create-crew.component.html
+++ b/src/app/main-page/create-forms/create-crew/create-crew.component.html
@@ -9,7 +9,7 @@
       @if(name?.invalid && name?.touched){
       <div class="error">
         <small>
-          Crew name is required and must be at least 3 characters long.
+          Crew name is required and must be between (3-20) characters long.
         </small>
       </div>
       }
