--- a/src/app/main-page/kickoff/kickoff.component.css
+++ b/src/app/main-page/kickoff/kickoff.component.css
@@ -1,17 +1,21 @@
 :host {
   display: block;
-  margin: 0 auto;
-  padding: 20px;
   background-color: #1a1a1a;
-  border-radius: 12px;
-  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   color: #f5f5f5;
   font-family: "Roboto", sans-serif;
 }
 
-.result-container {
-  width: 80%;
+.kickoff-container {
+  max-width: 800px;
   margin: 0 auto;
+  padding: 20px;
+  border-radius: 12px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  background-color: #1a1a1a;
+}
+
+.result-container {
+  width: 100%;
   padding: 20px;
   background-color: #2c2c2c;
   border-radius: 8px;
