--- a/src/app/main-page/kickoff/kickoff.component.html
+++ b/src/app/main-page/kickoff/kickoff.component.html
@@ -1,30 +1,16 @@
-<button class="go-back-btn" (click)="goBack()">Go Back</button>
-@if(canLoadTemplate) {
-<div class="result-container">
-  <p class="separator">#################################</p>
-  <p class="result-title">RESULT CREWAI</p>
-  <p class="result-content">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aut inventore
-    deleniti! Architecto vero, ratione beatae deleniti facere illo at inventore
-    laborum repellat reiciendis velit quis cupiditate nam nemo ab! Soluta
-    incidunt delectus suscipit temporibus aut sint, sequi eligendi vitae
-    pariatur earum qui in nam vero magni voluptas cum consequatur repellendus
-    tempore? ...
+<div class="kickoff-container">
+  <button class="go-back-btn" (click)="goBack()">Go Back</button>
+
+  @if(canLoadTemplate) {
+  <div class="result-container">
+    <p class="separator">#################################</p>
+    <p class="result-title">RESULT CREWAI</p>
+    <div class="result-content"></div>
+  </div>
+  } @else {
+  <p class="no-result">
+    Either the crew does not exist, not all agents have been assigned tasks, or
+    there are no agents/tasks available.
   </p>
-  <p class="separator">#################################</p>
-  <p class="result-content">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aut inventore
-    deleniti! Architecto vero, ratione beatae deleniti facere illo at inventore
-    laborum repellat reiciendis velit quis cupiditate nam nemo ab! Soluta
-    incidunt delectus suscipit temporibus aut sint, sequi eligendi vitae
-    pariatur earum qui in nam vero magni voluptas cum consequatur repellendus
-    tempore? ...
-  </p>
-  <p class="separator">#################################</p>
+  }
 </div>
-} @else {
-<p class="no-result">
-  Either the crew does not exist, not all agents have been assigned tasks, or
-  there are no agents/tasks available.
-</p>
-}
