[feat] Http request added

--- a/src/app/main-page/kickoff/kickoff.component.html
+++ b/src/app/main-page/kickoff/kickoff.component.html
@@ -5,7 +5,7 @@
   <div class="result-container">
     <p class="separator">#################################</p>
     <p class="result-title">RESULT CREWAI</p>
-    <div class="result-content"></div>
+    <div class="result-content">{{ responseMessage }}</div>
   </div>
   } @else {
   <p class="no-result">
