--- a/src/app/main-page/google-sheet/google-sheet.component.html
+++ b/src/app/main-page/google-sheet/google-sheet.component.html
@@ -40,9 +40,11 @@
     </div>
     }
   </div>
+  <div class="vertical-divider"></div>
   <button class="kickoff-btn" (click)="navigateToKickoff()">
-    Crew Kickoff
+    KickOff Configurator
   </button>
+  <div class="vertical-divider"></div>
   <button class="delete-crew" (click)="deleteCrew()">
     <i class="fas fa-trash-alt"></i>
   </button>
