--- a/src/app/main-page/create-forms/add-task/add-task.component.html
+++ b/src/app/main-page/create-forms/add-task/add-task.component.html
@@ -1,8 +1,10 @@
 <div class="modal-container">
   <div class="modal-content">
     <div class="modal-header">
-      <h2>Add New Task</h2>
-      <i class="fas fa-tasks"></i>
+      <div class="header-content">
+        <h2>Add New Task</h2>
+        <i class="fas fa-tasks"></i>
+      </div>
       <button class="close-btn" (click)="closeModal()">✖</button>
     </div>
 
