--- a/src/app/main-page/create-forms/create-agent/create-agent.component.html
+++ b/src/app/main-page/create-forms/create-agent/create-agent.component.html
@@ -1,96 +1,109 @@
-<div class="modal-overlay"></div>
-<div class="form-container">
-  <h2>Create New Agent<i class="fas fa-robot"></i></h2>
+<div class="modal-overlay">
+  <div class="form-container">
+    <div class="form-header">
+      <h2>Create New Agent<i class="fas fa-robot"></i></h2>
+    </div>
 
-  <form [formGroup]="agentForm" (ngSubmit)="onSubmit()">
-    <div class="form-group">
-      <label for="name">Name</label>
-      <input id="name" type="text" formControlName="name" />
+    <form [formGroup]="agentForm" (ngSubmit)="onSubmit()">
+      <div class="form-content">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input id="name" type="text" formControlName="name" />
+          <div
+            *ngIf="
+              agentForm.get('name')?.invalid && agentForm.get('name')?.touched
+            "
+            class="error"
+          >
+            <small
+              >Name is required and must be at least 3 characters long and no
+              more than 200 characters.</small
+            >
+          </div>
+        </div>
 
-      @if(agentForm.get('name')?.invalid && agentForm.get('name')?.touched){
-      <div class="error">
-        <small
-          >Name is required and must be at least 3 characters long and no more
-          than 200 characters.</small
-        >
+        <div class="form-group">
+          <label for="role">Role</label>
+          <input id="role" type="text" formControlName="role" />
+          <div
+            *ngIf="
+              agentForm.get('role')?.invalid && agentForm.get('role')?.touched
+            "
+            class="error"
+          >
+            <small
+              >Role is required, must be at least 3 characters long, must
+              contain only letters, and no more than 200 characters.</small
+            >
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="goal">Goal</label>
+          <input id="goal" type="text" formControlName="goal" />
+          <div
+            *ngIf="
+              agentForm.get('goal')?.invalid && agentForm.get('goal')?.touched
+            "
+            class="error"
+          >
+            <small
+              >Goal is required, must be at least 5 characters long, must
+              contain letters, and no more than 200 characters.</small
+            >
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="backstory">Backstory</label>
+          <textarea id="backstory" formControlName="backstory"></textarea>
+          <div
+            *ngIf="
+              agentForm.get('backstory')?.invalid &&
+              agentForm.get('backstory')?.touched
+            "
+            class="error"
+          >
+            <small
+              >Backstory is required, must be at least 10 characters long, must
+              contain letters, and no more than 200 characters.</small
+            >
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="verbose">Verbose</label>
+          <select id="verbose" formControlName="verbose">
+            <option [value]="false">False</option>
+            <option [value]="true">True</option>
+          </select>
+        </div>
+
+        <div class="form-group">
+          <label for="tool">Tool</label>
+          <select id="tool" formControlName="tool">
+            <option value="crewAI Tool 1">crewAI Tool 1</option>
+            <option value="crewAI Tool 2">crewAI Tool 2</option>
+            <option value="crewAI Tool 3">crewAI Tool 3</option>
+            <option value="crewAI Tool 4">crewAI Tool 4</option>
+            <option value="crewAI Tool 5">crewAI Tool 5</option>
+          </select>
+        </div>
       </div>
-      }
-    </div>
 
-    <div class="form-group">
-      <label for="role">Role</label>
-      <input id="role" type="text" formControlName="role" />
-      @if(agentForm.get('role')?.invalid && agentForm.get('role')?.touched){
-      <div class="error">
-        <small
-          >Role is required, must be at least 3 characters long, must contain
-          only letters, and no more than 200 characters.</small
+      <div class="button-group">
+        <button type="button" class="back-btn" (click)="onClose()">
+          <i class="fas fa-arrow-left"></i> Close
+        </button>
+        <button
+          type="submit"
+          class="submit-btn"
+          [disabled]="agentForm.invalid"
+          [ngClass]="{ 'button-invalid': agentForm.invalid }"
         >
+          Save
+        </button>
       </div>
-      }
-    </div>
-
-    <div class="form-group">
-      <label for="goal">Goal</label>
-      <input id="goal" type="text" formControlName="goal" />
-
-      @if(agentForm.get('goal')?.invalid && agentForm.get('goal')?.touched){
-      <div class="error">
-        <small
-          >Goal is required, must be at least 5 characters long, must contain
-          letters, and no more than 200 characters.</small
-        >
-      </div>
-      }
-    </div>
-
-    <div class="form-group">
-      <label for="backstory">Backstory</label>
-      <textarea id="backstory" formControlName="backstory"></textarea>
-
-      @if(agentForm.get('backstory')?.invalid &&
-      agentForm.get('backstory')?.touched){
-      <div class="error">
-        <small
-          >Backstory is required, must be at least 10 characters long, must
-          contain letters, and no more than 200 characters.</small
-        >
-      </div>
-      }
-    </div>
-
-    <div class="form-group">
-      <label for="verbose">Verbose</label>
-      <select id="verbose" formControlName="verbose">
-        <option [value]="false">False</option>
-        <option [value]="true">True</option>
-      </select>
-    </div>
-
-    <div class="form-group">
-      <label for="tool">Tool</label>
-      <select id="tool" formControlName="tool">
-        <option value="crewAI Tool 1">crewAI Tool 1</option>
-        <option value="crewAI Tool 2">crewAI Tool 2</option>
-        <option value="crewAI Tool 3">crewAI Tool 3</option>
-        <option value="crewAI Tool 4">crewAI Tool 4</option>
-        <option value="crewAI Tool 5">crewAI Tool 5</option>
-      </select>
-    </div>
-
-    <div class="button-group">
-      <button type="button" class="back-btn" (click)="onClose()">
-        <i class="fas fa-arrow-left"></i> Close
-      </button>
-
-      <button
-        type="submit"
-        class="submit-btn"
-        [disabled]="agentForm.invalid"
-        [ngClass]="{ 'button-invalid': agentForm.invalid }"
-      >
-        Save
-      </button>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
