--- a/src/app/main-page/google-sheet/google-sheet.component.css
+++ b/src/app/main-page/google-sheet/google-sheet.component.css
@@ -86,7 +86,7 @@
   border: 1px solid #dadce0;
   border-radius: 0.375rem;
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
-  appearance: none; /* Remove default arrow */
+  appearance: none; 
   box-shadow: 0 2px 4px rgba(60, 64, 67, 0.15);
 }
 
@@ -119,7 +119,7 @@
   border: 1px solid #dadce0;
   border-radius: 0.375rem;
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
-  appearance: none; /* Remove default arrow */
+  appearance: none; 
   box-shadow: 0 2px 4px rgba(60, 64, 67, 0.15);
 }
 
